--- a/client/src/styles/UnreviewedEssay.css
+++ b/client/src/styles/UnreviewedEssay.css
@@ -2,7 +2,9 @@
   margin: 0 20%;
   display: flex;
   flex-direction: column;
-  align-items: center;
+}
+.unreviewed-essay h1{
+  text-align: center;
 }
 .unreviewed-essay-block {
   background-color: white;
