--- a/client/src/styles/IndividualEssay.css
+++ b/client/src/styles/IndividualEssay.css
@@ -31,13 +31,13 @@
   padding-bottom: 10%;
 }
 .individual-essay-form > label {
-  font-family: sans-serif;
+  /* font-family: sans-serif; */
   font-weight: bold;
   padding: 1% 0;
 }
 
 .individual-essay-form > textarea {
-  font-family: sans-serif;
+  /* font-family: sans-serif; */
   font-size: large;
   border-radius: 10px;
   border: none;
