--- a/client/src/styles/ReviewedEssay.css
+++ b/client/src/styles/ReviewedEssay.css
@@ -1,10 +1,16 @@
 .reviewed-essay {
   margin: 0 20%;
+  margin-bottom: 5%;
   display: flex;
   flex-direction: column;
 }
 .reviewed-essay-header {
   color: rgb(18, 26, 70);
+  text-align: center;
+}
+.reviewed-essay-header > p{
+  text-align: left !important;
+  margin-top: 10px;
 }
 .reviewed-essay-header > p:hover {
   cursor: pointer;
@@ -39,4 +45,45 @@
   font-weight: normal;
   font-size: 20px;
   line-height: 35px;
+}
+
+
+@media only screen and (max-width: 1600px) {
+  .reviewed-essay {
+    margin: 0 10%;
+  }
+  .reviewed-essay-header{
+    margin-bottom: 10px;
+
+  }
+  .reviewed-essay-header > p{
+    margin-top: 10px;
+    margin-bottom: 0;
+  }
+  .reviewed-essay-header > h1{
+    font-size: 30px;
+  }
+  .reviewed-essay-feedback > h5 > span {
+    font-size: 14px !important;
+  }
+  .reviewed-essay-feedback > h5{
+    font-size: 14px !important;
+  }
+  .reviewed-essay-content > h4 {
+    font-size: 14px !important;
+  }
+  .reviewed-essay-content > h5{
+    font-size: 14px !important;
+  }
+}
+
+@media only screen and (max-width: 1000px) {
+  .submit-essay > h2 {
+    margin: 30px 0 10px 0;
+    font-size: 20px;
+  }
+  .submit-essay > form > label {
+    font-size: 13px;
+  }
+
 }
