--- a/client/src/styles/SubmitEssay.css
+++ b/client/src/styles/SubmitEssay.css
@@ -1,25 +1,25 @@
-.new-essay {
+.submit-essay {
   margin: 0 20%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
-.new-essay > h2 {
+.submit-essay > h2 {
   font-size: 30px;
   color: rgb(18, 26, 70);
 }
-.new-essay > form {
+.submit-essay > form {
   display: flex;
   width: 80%;
   flex-direction: column;
 }
-.new-essay > form > label {
+.submit-essay > form > label {
   font-size: 20px;
   font-weight: bold;
   margin: 1% 0;
 }
-.new-essay > form > input {
+.submit-essay > form > input {
   background-color: white;
   width: 100%;
   padding: 2%;
@@ -28,7 +28,7 @@
   font-family: sans-serif;
   font-size: 18px;
 }
-.new-essay > form > textarea {
+.submit-essay > form > textarea {
   background-color: white;
   width: 100%;
   padding: 2%;
@@ -36,7 +36,7 @@
   border: none;
   resize: none;
 }
-.new-essay > form > button {
+.submit-essay > form > button {
   background-color: rgb(18, 26, 70);
   width: 25%;
   margin: 4% 35%;
@@ -50,7 +50,23 @@
 }
 .submit-essay-error {
   color: red;
-  margin-top: 2%;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-size: 20px;
+  text-align: center;
+  margin-top: 2%;
+}
+@media only screen and (max-width: 1600px) {
+  .submit-essay {
+    margin: 0 10%;
+  }
+}
+
+@media only screen and (max-width: 1000px) {
+  .submit-essay > h2 {
+    margin: 30px 0 10px 0;
+    font-size: 20px;
+  }
+  .submit-essay > form > label {
+    font-size: 13px;
+  }
 }
